# Trader-Bot

./: .env.example  .gitignore  README.md  build_exe.ps1  main.py  pyproject.toml
configs/: backtest.yaml  default.yaml  live.yaml  paper.yaml
src/eurusd_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/trading_bot/: main.py
src/trading_bot/application/: backtest_runner.py  live_runner.py  paper_runner.py
src/trading_bot/backtest/: __init__.py  engine.py  metrics.py
src/trading_bot/common/: decimal_utils.py  exceptions.py  identifiers.py  time_utils.py
src/trading_bot/config/: loader.py  models.py
src/trading_bot/data/app/: trading_bot.db
src/trading_bot/domain/: __init__.py  models.py
src/trading_bot/execution/: __init__.py  gateway.py  mt5_gateway.py  order_builder.py  paper_gateway.py
src/trading_bot/indicators/: __init__.py  core.py
src/trading_bot/market_data/: __init__.py  csv_provider.py  demo_data.py  symbols.py
src/trading_bot/persistence/: __init__.py  database.py
src/trading_bot/risk/: __init__.py  manager.py  position_sizer.py
src/trading_bot/strategies/: __init__.py  base.py  registry.py  strong_candle.py  trend_pullback.py
src/trading_bot/ui/: app.py
tests/unit/: test_backtest.py  test_config_loader.py  test_indicators.py  test_mt5_gateway.py  test_risk.py  test_runners.py  test_strategy.py  test_strong_candle_strategy.py
