[project]
name = "eurusd-trading-bot"
version = "0.1.0"
description = "Modular EURUSD MetaTrader 5 trading bot with an in-app backtest/reporting UI."
requires-python = ">=3.11"
dependencies = [
    "MetaTrader5>=5.0.45; platform_system == 'Windows'",
    "PySide6>=6.7",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pytest>=8.0",
]

[project.scripts]
eurusd-bot = "trading_bot.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

